--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
   will-change: transform;
+  color: #333333;
 }
 
 @keyframes float {
